# gget

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  design.md
.github/workflows/: coverage.yml  main.yml  release.yml  rust.yml
benches/: dependency_bench.rs
src/: cache.rs  dependency.rs  fetch.rs  lib.rs  main.rs  parallel.rs  query.rs
tests/: atomic_downloads.rs  dependency.rs  directory_dependencies.rs  gget.rs  parallel_downloads.rs
