[package]
name = "gget"
version = "0.1.0"
edition = "2021"

[lib]
name = "gget"
path = "src/lib.rs"

[[bin]]
name = "gget"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio-test = "0.4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
